# de

./: .gitignore  .npmrc  des.pen  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.shared.ts
.github/actions/setup-node-pnpm/: action.yml
.github/workflows/: build-android.yml  build-ios.yml  build-tauri.yml
.kiro/skills/debug-pro-1.0.0/: SKILL.md
.kiro/skills/feishu-drive-1.0.0/: SKILL.md
.kiro/skills/test-runner-1.0.0/: SKILL.md
apps/: reagent-templates.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/wix/: zh-CN.wxl
apps/mobile/: capacitor.config.ts  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/src/: main.tsx
apps/mobile/src/app/: App.tsx
apps/mobile/src/lib/: capacitorUtils.ts  platformOps.ts  updater.ts
apps/mobile/src/pages/: BatchPage.tsx  CryptoPage.tsx  DecodePage.tsx  DigitCryptoPage.tsx  EncodePage.tsx  HomePage.tsx  ScanBatchPage.tsx  SettingsPage.tsx
apps/web/: package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: main.tsx
assets/: des.pen
assets/brand/: README.md
scripts/: build-desktop.mjs  fix_attrs.py  run-tauri.mjs  sync-brand-assets.mjs
web1/: index.html
web1/resources/css/: styles.css
web1/resources/js/: alpine.min.js  script.js
web3/: index.html
web3/resources/css/: styles.css
web3/resources/js/: script.js
~/.tauri/: chemtools.key  chemtools.key.pub
(+32 files in other folders)
