[package]
name = "chemtools"
version = "0.1.0"
description = "ChemTools Desktop"
authors = []
edition = "2021"

[lib]
name = "chemtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chemtools"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dev profile: faster incremental compilation
[profile.dev]
incremental = true

# Release profile: optimise for runtime speed and strip debug symbols
[profile.release]
codegen-units = 1   # Let LLVM do full cross-crate optimisation
lto = true          # Link-time optimisation — reduces binary size and improves inlining
opt-level = 3       # Maximise runtime speed (use "s" to prioritise binary size instead)
panic = "abort"     # Skip panic unwinding machinery — smaller binary, faster panics
strip = true        # Remove debug symbols from the final binary
